# django-school-restapi

./: .gitignore  .pylintrc  Dockerfile  README.md  db.sqlite3  docker-compose.yaml  manage.py  pyproject.toml  requirements.txt
backups/: command backup  command restore  school-backup.sql
custom/: models.py
myapp/: consumers.py  routing.py  schema.py  serializers.py  urls.py  views.py
myapp/migrations/: 0001_initial.py  0002_group_student.py  0003_rename_group_groupmodel_rename_student_studentmodel.py  0004_alter_groupmodel_table_alter_studentmodel_table.py  0005_subjectmodel_exammodel.py
school/: admin.py  apps.py  managers.py  models.py  serializers.py  urls.py  views.py
school/migrations/: 0001_initial.py  0002_group_student.py  0003_rename_group_groupmodel_rename_student_studentmodel.py  0004_alter_groupmodel_table_alter_studentmodel_table.py  0005_subjectmodel_exammodel.py  0006_delete_personmodel.py  0007_exammodel_type.py  0008_alter_exammodel_table.py  0016_myview.py  0017_studentaveragescore.py
testpoetry/: asgi.py  settings.py  urls.py  wsgi.py
